--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,25 +19,37 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-8 mx-auto">
-            <div id="carousel" class="carousel slide mt-5">
+            <div id="carouselExampleInterval" class="carousel slide mt-5" data-bs-ride="carousel">
                 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{{asset('assets/images/gem/façade.jpg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/gem/façade.png')}}" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/travail.jpg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/gem/travail.png')}}" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/cuisine.jpg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/gem/cuisine.png')}}" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/gem/café.png')}}" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/gem/salon.png')}}" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/gem/détente.png')}}" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/gem/jeuxVideos.png')}}" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
