--- a/templates/activity/index.html.twig
+++ b/templates/activity/index.html.twig
@@ -3,18 +3,63 @@
 {% block title %}Activités{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/coffl/OneDrive/Documents/ProjetsEnCours/LUSgem/src/Controller/ActivityController.php</code></li>
-        <li>Your template at <code>C:/Users/coffl/OneDrive/Documents/ProjetsEnCours/LUSgem/templates/activity/index.html.twig</code></li>
-    </ul>
+<div class="container mb-5">
+    <div class="border rounded border-3 px-5 py-5 bg-light" >
+        <div class="d-flex justify-content-center ">       
+            <h1 class="text-uppercase fw-bolder text-decoration-underline mt-5"style="color:#1350a2;">ACTIVITES</h1>
+        </div>       
+        <div class="fs-5 d-flex justify-content-center mt-5 fw-normal">
+            <p>"Au GEM nous nous rencontrons pour discuter et boire un thé ou un café, nous partageons des repas et nous réalisons de nombreuses activités. - Musique  -Débats - Cuisine  - Ateliers créatifs - QI Gong - Balades  Jardinage  - Jeux de société - "</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-8 mx-auto">
+            <div id="carouselActivity" class="carousel slide mt-5" data-bs-ride="carousel">
+                
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{asset('assets/images/activités/sortie_café.jpeg')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Bienvenu à l'Association "Les Univers Singulier"</h5>
+                            <p>"Venez prendre un café !!"</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/activités/atelier_cuisine.jpeg')}}" class="d-block w-100" alt="...">
+                         <div class="carousel-caption d-none d-md-block">
+                            <p>"Atelier cuisine: recette pâtes fraîches"</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/activités/atelier_cosmétique.jpeg')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"Atelier cosmétique, réalisation de gel d'aloé vérae"</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/activités/atelier_musique.jpeg')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"Eventuellement si la musique vous intéresse !!"</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/gem/salon.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"Le salon"</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselActivity" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselActivity" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>        
 </div>
 {% endblock %}
