--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,24 +24,46 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="{{asset('assets/images/gem/façade.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Bienvenu à l'Association "Les Univers Singulier"</h5>
+                            <p>"La façade"</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/gem/travail.png')}}" class="d-block w-100" alt="...">
+                         <div class="carousel-caption d-none d-md-block">
+                            <p>"L'espace travail"</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/gem/cuisine.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"La cuisine"</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/gem/café.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"L'espace café"</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/gem/salon.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"Le salon"</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/gem/détente.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"L'espace détente"</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/gem/jeuxVideos.png')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>"L'espace jeux vidéos"</p>
+                        </div>
                     </div>
                 </div>
                 
