--- a/templates/_commons/_footer.html.twig
+++ b/templates/_commons/_footer.html.twig
@@ -46,8 +46,8 @@
   
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4 mb-md-0 my-5 ">
-           
-                <div class="row ">
+          <h5 class="text-uppercase text-decoration-underline fs-4"style="color:#fa7824;">adresse</h5> 
+                <div class="row  my-5">
                     <div class="col-lg-12">
                         <div class="ratio ratio-16x9">
                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2812.3476522699066!2d0.7262100765944575!3d45.180058352352056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ff70521cdaa671%3A0xf08ab678fad373ad!2s35%20Rue%20Talleyrand-P%C3%A9rigord%2C%2024000%20P%C3%A9rigueux!5e0!3m2!1sfr!2sfr!4v1719248820171!5m2!1sfr!2sfr" width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
