--- a/templates/activity/index.html.twig
+++ b/templates/activity/index.html.twig
@@ -43,9 +43,9 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/salon.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/activités/jardin_partagé.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"Le salon"</p>
+                            <p>"Activité jardin"</p>
                         </div>
                     </div>
                 </div>
