rajouter le téléchargement du moock

--- a/templates/moock/index.html.twig
+++ b/templates/moock/index.html.twig
@@ -24,8 +24,9 @@
         </div>       
         <div class="fs-5  mt-5 fw-normal">
             <p>À la suite d’un échange courant mars 2020 concernant une participation à la journée internationale d’information sur l’autisme (2 avril 2020), l’idée de rassembler des témoignages de personnes autistes a émergé. Nous souhaitions donner la possibilité à chacun de mettre en avant son univers singulier, au-delà des clichés, et avec une liberté totale d’expression à travers des témoignages et des illustrations. Au fur et à mesure, nous avons rassemblé des récits qui composent un patchwork reflétant la diversité de nos univers singuliers, puis sont venus étoffer notre mook un dictionnaire amoureux de l’autisme et un guide pour permettre aux personnes non autistes de mieux appréhender l’autisme et les personnes autistes, afin qu’elles bénéficient d’outils précieux pour co construire une relation respectueuse.</p>
-            <div>
-                <a class="justify-content-center" href="#♥">Téléchargement de la version PDF du Mook 1</a>
+            <div class="d-flex justify-content-center align-items-center">
+                <img src="{{asset('assets/images/moock.jpg')}}" width="100px" height="100px" alt="ma bannière">
+                <a class=" ms-5" style="color: #fa7824;" href="https://drive.google.com/file/d/1WlZbgKKZ0A6j7uLRxVywZE2xIsCvwDst/view?usp=sharing">Téléchargement de la version PDF du Mook 1</a>
             </div>
         </div>
     </div>
