--- a/templates/_commons/_banner.html.twig
+++ b/templates/_commons/_banner.html.twig
@@ -1,10 +1,10 @@
 
-{#<img src="{{asset('assets/images/Gomette 2.png')}}" width="60px" height="60px">#}
+{##}
 
-<header class="row g-2">
+<div class="row position-relative g-2">
     
-    <img src="{{asset('assets/images/banner.png')}}" style="max-height:700px" alt="ma bannière">
-    
-          
+        <img src="{{asset('assets/images/banner.png')}}" style="max-height:350px" alt="ma bannière">
         
-</header>
+           <a class="position-absolute top-0 end-0 p-3" href="{{ path('home') }}"><img src="{{asset('assets/images/Gomette 2.png')}}" width="60px" height="60px"></a>      
+           
+</div>
