--- a/templates/activity/index.html.twig
+++ b/templates/activity/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Activités{% endblock %}
 
 {% block body %}
-<div class="container mb-5">
+<div class="container-xxl p-3 mt-1 mx-auto mb-5">
     <div class="border rounded border-3 px-5 py-5 bg-light" >
         <div class="d-flex justify-content-center ">       
             <h1 class="text-uppercase fw-bolder text-decoration-underline mt-5"style="color:#1350a2;">ACTIVITES</h1>
@@ -18,7 +18,7 @@
                 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{{asset('assets/images/activités/sortie_café.jpeg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/activités/café.jpg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Bienvenu à l'Association "Les Univers Singulier"</h5>
                             <p>"Venez prendre un café !!"</p>
@@ -31,19 +31,19 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/activités/atelier_cosmétique.jpeg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/activités/atelier_cosmétique.jpg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"Atelier cosmétique, réalisation de gel d'aloé vérae"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/activités/atelier_musique.jpeg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/activités/atelier_musique.jpg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"Eventuellement si la musique vous intéresse !!"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/activités/jardin_partagé.jpeg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/activités/jardin_partagé.jpg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"Activité jardin"</p>
                         </div>
