--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-<div class="container mb-5">
+<div class="container-xxl p-3 mt-1 mx-auto mb-5">
     <div class="border rounded border-3 px-5 py-5 bg-light" >
         <div class="d-flex justify-content-center ">       
             <h1 class="text-uppercase fw-bolder text-decoration-underline mt-5"style="color:#1350a2;">Qui sommes nous ?</h1>
@@ -23,44 +23,44 @@
                 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{{asset('assets/images/gem/façade.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/façade.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Bienvenu à l'Association "Les Univers Singulier"</h5>
                             <p>"La façade"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/travail.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/travail.jpeg')}}" class="d-block w-100" alt="...">
                          <div class="carousel-caption d-none d-md-block">
                             <p>"L'espace travail"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/cuisine.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/cuisine.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"La cuisine"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/café.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/café.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"L'espace café"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/salon.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/salon.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"Le salon"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/détente.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/detente.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"L'espace détente"</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/gem/jeuxVideos.png')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/jeuxVideos.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"L'espace jeux vidéos"</p>
                         </div>
