--- a/templates/_commons/_banner.html.twig
+++ b/templates/_commons/_banner.html.twig
@@ -1,7 +1,7 @@
 
 {##}
 
-<div class="row position-relative g-2">
+<div class="row position-relative ">
     
         <img src="{{asset('assets/images/banner.png')}}" style="max-height:350px" alt="ma bannière">
         
