--- a/templates/_commons/_footer.html.twig
+++ b/templates/_commons/_footer.html.twig
@@ -8,8 +8,9 @@
       <div class="row d-flex justify-content-center">
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4 mb-md-0 my-5">
-          <h5 class="text-uppercase text-decoration-underline fs-4 "style="color:#fa7824;">contact</h5>
-  
+          <h5 class="text-uppercase text-decoration-underline mb-4 fs-4 "style="color:#fa7824;">contact</h5>
+          <h4 class="mb-4 fs-5" style="color:#fa7824;">Les animateurs</h4>
+          
           <p class="text-uppercase mb-4 fs-5"style="color:#fa7824;">
            07.85.31.32.09
           </p>
