--- a/templates/_commons/_nav.html.twig
+++ b/templates/_commons/_nav.html.twig
@@ -15,7 +15,7 @@
               </li>
             
               <li class="nav-item">
-              <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('moock.index') }}">Moock</a>
+              <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('mook.index') }}">Mook</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('activity.index') }}">Activités</a>
@@ -25,6 +25,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="#">Ressources</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bolder " style="background-color: #fa7824; color:#FFDF57;" href="#">Projets</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bolder " style="background-color: #fa7824; color:#FFDF57;" href="#">Contact</a>
