--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,7 +25,7 @@
                     <div class="carousel-item active">
                         <img src="{{asset('assets/images/home/façade.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Bienvenu à l'Association "Les Univers Singulier"</h5>
+                            <h5>Bienvenu à l'Association "Les Univers Singuliers"</h5>
                             <p>"La façade"</p>
                         </div>
                     </div>
