--- a/templates/mook/index.html.twig
+++ b/templates/mook/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Moock{% endblock %}
+{% block title %}Mook{% endblock %}
 
 {% block body %}
 <div class="container mb-5">
