--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,45 +26,51 @@
                         <img src="{{asset('assets/images/home/façade.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Bienvenu à l'Association "Les Univers Singuliers"</h5>
-                            <p>"La façade"</p>
+                            <p>" La façade "</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/home/travail.jpeg')}}" class="d-block w-100" alt="...">
                          <div class="carousel-caption d-none d-md-block">
-                            <p>"L'espace travail"</p>
+                            <p>" L'espace travail "</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/home/cuisine.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"La cuisine"</p>
+                            <p>" La cuisine "</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/home/café.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"L'espace café"</p>
+                            <p>" L'espace café "</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{{asset('assets/images/home/salon.jpeg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"Le salon"</p>
+                            <p>" Le salon "</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/home/detente.jpeg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/salleDetente.jpg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"L'espace détente"</p>
+                            <p>" L'espace détente "</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{{asset('assets/images/home/jeuxVideos.jpeg')}}" class="d-block w-100" alt="...">
+                        <img src="{{asset('assets/images/home/salleVideo.jpg')}}" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"L'espace jeux vidéos"</p>
+                            <p>" L'espace jeux vidéos "</p>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <img src="{{asset('assets/images/home/salleActivité.jpg')}}" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>" L'espace créativité "</p>
+                        </div>
+                    </div>    
                 </div>
                 
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
