--- a/templates/podcast/index.html.twig
+++ b/templates/podcast/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Presse{% endblock %}
+{% block title %}Podcast{% endblock %}
 
 {% block body %}
 <div class="container">
     <section class="row  mx-auto">
         <div class="row col-12 mx-auto">
-            <h1>Presses</h1>
+            <h1>Podcasts</h1>
         </div>
-        {% for presse in presse %}
+        {% for podcast in podcast %}
         <div class="col g-1 py-3">   
             <div class="card mb-3 mx-auto" style="width: 18rem;">
-                <img src="{{ asset('upload/'~ presse.illustration)}}" class="card-img-top" alt="...">
+                <img src="{{ asset('upload/'~ podcast.illustration)}}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <h5 class="card-title text-center ">{{presse.name}}</h5>
-                    <a href="{{path('presse.show', {'id': presse.id})}}" class="btn btn-primary" style="background-color: #D199B6" >Voir plus</a>
+                    <h5 class="card-title text-center ">{{podcast.name}}</h5>
+                    <a href="{{path('podcast.show', {'id': podcast.id})}}" class="btn btn-primary" style="background-color: #D199B6" >Voir plus</a>
                 </div>
             </div>
         </div>
