--- a/templates/presse/_delete_form.html.twig
+++ b/templates/presse/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_presse_delete', {'id': presse.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('pressedelete', {'id': presse.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ presse.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn"class="btn btn-primary" style="background-color: #D199B6" >Supprimer</button>
 </form>
