--- a/templates/projets/index.html.twig
+++ b/templates/projets/index.html.twig
@@ -13,7 +13,7 @@
             <div class="card mb-3 mx-auto" style="width: 18rem;">
                 <img src="{{ asset('upload/'~ projets.illustration)}}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <h5 class="card-title text-center ">{{projets.name}}</h5>
+                    <h5 class="card-title text-center ">{{projets.titre}}</h5>
                     <a href="{{path('projets.show', {'id': projets.id})}}" class="btn btn-primary" style="background-color: #D199B6" >Voir plus</a>
                 </div>
             </div>
