--- a/templates/presse/index.html.twig
+++ b/templates/presse/index.html.twig
@@ -13,7 +13,7 @@
             <div class="card mb-3 mx-auto" style="width: 18rem;">
                 <img src="{{ asset('upload/'~ presse.illustration)}}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <h5 class="card-title text-center ">{{presse.name}}</h5>
+                    <h5 class="card-title text-center ">{{presse.titre}}</h5>
                     <a href="{{path('presse.show', {'id': presse.id})}}" class="btn btn-primary" style="background-color: #D199B6" >Voir plus</a>
                 </div>
             </div>
