--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -12,15 +12,15 @@
                 
         {% for article in articles %}
         <div class="col g-1 py-3">   
-            <div class="card mb-3 mx-auto" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 18rem; height:25rem">
                 <img src="{{ asset('upload/'~ article.illustration)}}" class="card-img-top" alt="...">
-                <div class="card-body text-center">
+                <div class="card-body align-item text-center">
                     <h5 class="card-title text-center ">{{article.titre}}</h5>
                     {#<p class="card-text">{{article.content}}</p>#}
                     <a href="{{path('articles.show', {'id': article.id})}}" class="btn btn-primary" style="background-color: #D199B6" >Voir plus</a>
                 </div>
             </div>
-             {# <div class="card-footer text-body-secondary">{{article.created_at}}</div>#}
+            {#<div class="card-footer text-body-secondary">{{article.created_at}}</div>#}
         </div>
         {% endfor %}
     </section>
