--- a/templates/articles/show.html.twig
+++ b/templates/articles/show.html.twig
@@ -8,10 +8,10 @@
             <img src="{{ asset('upload/'~ article.illustration)}}" class="card-img-top rounded " alt="..." style="max-width: 800px; ">
             <div class="caption text-center pt-3">
                 
-                <h1 class="h1">{{ article.titre }}</h1>
-                <p class="display-5"> {{ article.content }}€</p>
-                <span class={{article.lien }}"display-6">Autheur : {{article.autheur }}</span>
-                <a href="{{article.lien }}" ></a>
+                <h1 class="h1">{{ article.titre }}</h1><span class="display-6">Autheur : {{article.autheur }}</span>
+                <p class="display-5"> {{ article.content }}</p>
+                
+                <a href="{{article.lien }}" >{{article.lien }}</a>
             </div>
         </div>
          {% if is_granted('ROLE_ADMIN')  %}
