📦 NEW: easyAdmin dashBoard + crudAdmin

--- a/templates/_commons/_banner.html.twig
+++ b/templates/_commons/_banner.html.twig
@@ -5,6 +5,6 @@
     
         <img src="{{asset('assets/images/banner.png')}}" style="max-height:350px" alt="ma bannière">
         
-           <a class="position-absolute top-0 end-0 p-3" href="{{ path('home') }}"><img src="{{asset('assets/images/Gomette 2.png')}}" width="60px" height="60px"></a>      
+           <a class="position-absolute top-0 end-0 p-3" href="{{ path('admin') }}"><img src="{{asset('assets/images/Gomette 2.png')}}" width="60px" height="60px"></a>      
            
 </div>
