--- a/templates/_commons/_nav.html.twig
+++ b/templates/_commons/_nav.html.twig
@@ -19,11 +19,11 @@
               <li class="nav-item">
                 <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('activity.index') }}">Activités</a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('presse.index') }}">Presse</a>
+             <li class="nav-item ">
+                <a class="nav-link fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('presse.show') }}">Presse</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bolder " style="background-color: #fa7824; color:#FFDF57;" href="{{ path('projets.index') }}">Projets</a>
+                <a class="nav-link fw-bolder " style="background-color: #fa7824; color:#FFDF57;" href="{{ path('projet.show') }}">Projets</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bolder " style="background-color: #fa7824; color:#FFDF57;" href="{{ path('contact.index') }}">Contact</a>
@@ -31,11 +31,11 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Ressources</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('podcast.index') }}">Podcast</a></li>
-                  <li><a class="dropdown-item fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('articles.index') }}">Articles</a></li>
-                  <li><a class="dropdown-item fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('partenaires.index') }}">Nos Partenaires</a></li>
+                  <li><a class="dropdown-item fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('podcast.show') }}">Podcast</a></li>
+                  <li><a class="dropdown-item fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('article.show') }}">Articles</a></li>
+                  <li><a class="dropdown-item fw-bolder" style="background-color: #fa7824; color:#FFDF57;" href="{{ path('partenaire.show') }}">Nos Partenaires</a></li>
                 </ul>
-              </li>
+              </li> 
             </ul>
           </div>
         </div>
